--- a/app/views/application/_product_summary.html.erb
+++ b/app/views/application/_product_summary.html.erb
@@ -1,6 +1,6 @@
 <table id="product_summary_<%= production.product_id %>" class="table is-embed is-interval is-fullwidth align-self-flex-start text-grey">
 <% cart.find_items(production.brother_ids, good_type: production.base_class_name, **options).each do |item| %>
-  <tr data-id="<%= item.id %>" style="background-color: <%= item.good_id == production.id ? '#eee' : 'white' %>">
+  <tr data-id="<%= item.id %>" style="background-color: <%= item.good_id == production.id ? '#eee' : 'auto' %>">
     <td>
       <ul class="media-info display-inline-flex">
         <% item.good.production_parts.includes(:part).each do |production_part| %>
