text with fit content

--- a/app/views/application/_product_summary.html.erb
+++ b/app/views/application/_product_summary.html.erb
@@ -13,7 +13,7 @@
         <% end %>
       </ul>
     </dt>
-    <dd class="text-right">
+    <dd class="text-right" style="width: fit-content">
       <%= render partial: 'cart_new', locals: { item: @cart.init_cart_item(params, good_id: item.good_id), item_con: 'trade/my/items', cart: @cart } %>
     </dd>
   </div>
