--- a/app/views/factory/productions/_base/_component_part_number.html.erb
+++ b/app/views/factory/productions/_base/_component_part_number.html.erb
@@ -1,3 +1,4 @@
+<% disabled = component.disabled?(@production.part_ids, component_part.part_id) %>
 <div data-controller="modify" data-modify-submit-value="true" data-modify-step-value="1" class="button is-fullwidth justify-content-space-between is-light">
   <div>
     <span><%= component_part.part.name %></span>
@@ -15,19 +16,19 @@
       <%= hidden_field_tag 'production_parts_attributes[][part_id]', component_part.part_id, form: 'edit_custom', id: nil %>
     <% else %>
       <label class="button_to">
-        <i class="fa-solid fa-xl fa-minus text-grey"></i>
-        <%= check_box_tag 'production_parts_attributes[][part_id]', component_part.part_id, true, disabled: component.disabled?(@production.part_ids, component_part.part_id), data: { action: 'custom#toggle', part_taxon_id: component.part_taxon_id }, id: nil, class: 'display-none', form: 'edit_custom' %>
+        <i class="fa-solid fa-xl fa-minus <%= disabled ? 'text-grey-lighter' : 'text-grey' %>"></i>
+        <%= check_box_tag 'production_parts_attributes[][part_id]', component_part.part_id, true, disabled: disabled, data: { action: 'custom#toggle', part_taxon_id: component.part_taxon_id }, id: nil, class: 'display-none', form: 'edit_custom' %>
       </label>
     <% end %>
     <%= number_field_tag 'production_parts_attributes[][number]', @production.parts_hash[component_part.part_id].number, data: { action: 'change->input#form focus->input#blank', modify_target: 'input' }, form: 'edit_custom', class: 'text-centered', style: 'width: 3rem' %>
     <button data-action="modify#plus" class="button_to ml-1">
-      <i class="fa-solid fa-xl fa-plus text-grey"></i>
+      <i class="fa-solid fa-xl fa-plus <%= disabled ? 'text-grey-lighter' : 'text-grey' %>"></i>
     </button>
   <% else %>
     <%= hidden_field_tag 'production_parts_attributes[][number]', component_part.min, form: 'edit_custom', id: nil %>
     <label class="button_to">
-      <i class="fa-solid fa-xl fa-plus text-grey"></i>
-      <%= check_box_tag 'production_parts_attributes[][part_id]', component_part.part_id, false, disabled: component.disabled?(@production.part_ids, component_part.part_id), data: { action: 'custom#toggle', part_taxon_id: component.part_taxon_id }, id: nil, class: 'display-none', form: 'edit_custom' %>
+      <i class="fa-solid fa-xl fa-plus <%= disabled ? 'text-grey-lighter' : 'text-grey' %>"></i>
+      <%= check_box_tag 'production_parts_attributes[][part_id]', component_part.part_id, false, disabled: disabled, data: { action: 'custom#toggle', part_taxon_id: component.part_taxon_id }, id: nil, class: 'display-none', form: 'edit_custom' %>
     </label>
   <% end %>
   </div>
