modal card foter

--- a/app/views/factory/productions/_base/_modal_change.html+phone.erb
+++ b/app/views/factory/productions/_base/_modal_change.html+phone.erb
@@ -9,6 +9,6 @@
     <div class="modal-card-body">
       <%= yield %>
     </div>
-    <%= render 'modal_foot' %>
+    <%= render 'modal_foot_component' %>
   </div>
 </div>
