--- a/app/views/factory/agent/productions/index.html+phone.erb
+++ b/app/views/factory/agent/productions/index.html+phone.erb
@@ -1,3 +1,3 @@
 <div class="mt-3 mx-3">
-  <%= render partial: 'card', collection: @productions, as: :model, locals: { item_con: 'trade/agent/items' } %>
+  <%= render partial: 'production_cart', layout: 'card', collection: @productions, as: :model, locals: { cart: @cart, item_con: 'trade/agent/items' } %>
 </div>
