--- a/app/views/application/_modal_foot_component.html.erb
+++ b/app/views/application/_modal_foot_component.html.erb
@@ -1,5 +1,5 @@
 <footer class="modal-card-foot flex-direction-column">
-  <%= render partial: 'product_summary', locals: { production: @production, cart: @cart, options: params.permit(:dispatch) } %>
+  <%= render partial: 'product_summary', locals: { production: @production, cart: @cart, item_con: item_con, options: params.permit(:dispatch) } %>
   <div class="flex justify-content-space-between align-items-center is-fullwidth">
     <div>
       <p class="text-danger"><%= @production.price.to_money.format.html_safe %></p>
@@ -14,7 +14,7 @@
         <% end %>
       </ul>
     </div>
-    <%= render partial: 'cart_add', locals: { item: @cart.init_cart_item(params, good_id: @production.id), item_con: 'trade/my/items', cart: @cart } %>
+    <%= render partial: 'cart_add', locals: { item: @cart.init_cart_item(params, good_id: @production.id), cart: @cart, item_con: item_con } %>
   </div>
   <div class="flex justify-content-center align-items-center is-fullwidth mt-2">
     <button data-action="click->modal#close" class="button is-small is-rounded is-primary">确认</button>
