--- a/app/views/factory/agent/productions/index.html+phone.erb
+++ b/app/views/factory/agent/productions/index.html+phone.erb
@@ -1,3 +1,22 @@
-<div class="mt-3 mx-3">
-  <%= render partial: 'production_cart', layout: 'card', collection: @productions, as: :model, locals: { cart: @cart, item_con: 'trade/agent/items' } %>
+<%= render 'filter_form' %>
+
+<div class="weui-menu">
+  <%= render 'menu' unless @produce_plan %>
+  <div
+    data-controller="page"
+    data-page-debug-value="true"
+    data-action="touchmove->page#move:passive"
+    class="weui-menu-content"
+  >
+    <%= render partial: 'production_cart', layout: 'card', collection: @productions, as: :model, locals: { cart: @cart, item_con: 'trade/agent/items' } %>
+    <% if @productions.blank? %>
+      <%= render 'blank' %>
+    <% elsif @productions.total_pages <= @productions.current_page %>
+      <%= render 'no_more' %>
+    <% elsif @productions.total_pages > @productions.current_page %>
+      <%= render 'loading' %>
+      <%= render 'tip' %>
+    <% end %>
+    <%= render 'paginator' %>
+  </div>
 </div>
