--- a/app/views/factory/productions/_base/_paginator.html.erb
+++ b/app/views/factory/productions/_base/_paginator.html.erb
@@ -1,6 +1,6 @@
 <div
   data-page-target="paging"
-  data-total="<%= @products.total_pages %>"
-  data-page="<%= @products.current_page %>"
+  data-total="<%= @productions.total_pages %>"
+  data-page="<%= @productions.current_page %>"
 >
 </div>
