--- a/app/views/factory/productions/change_dispatch.turbo_stream.erb
+++ b/app/views/factory/productions/change_dispatch.turbo_stream.erb
@@ -3,7 +3,7 @@
     <div class="fixed-grid has-3-cols">
       <div class="grid gap-2 as-actions">
       <% Trade::Item.options_i18n(:dispatch).each do |text, value| %>
-        <%= link_to({ controller: '/factory/productions', dispatch: value }, class: 'cell has-column-centered') do %>
+        <%= link_to({ action: 'index', dispatch: value }, class: 'cell has-column-centered') do %>
           <% if value.to_s == params[:dispatch] %>
             <i class="fa-solid fa-check text-success"></i>
           <% else %>
