--- a/app/views/factory/agent/productions/_index/_card.html+phone.erb
+++ b/app/views/factory/agent/productions/_index/_card.html+phone.erb
@@ -8,7 +8,7 @@
     <h2 class="title is-6"><%= model.title %></h2>
     <strong class="text-danger"><%= model.price.to_money.format.html_safe %></strong>
   </div>
-  <div class="media-right as-x">
+  <div class="media-right">
     <%= yield %>
   </div>
 </div>
