--- a/app/views/factory/productions/_base/_modal_change.html+phone.erb
+++ b/app/views/factory/productions/_base/_modal_change.html+phone.erb
@@ -9,6 +9,6 @@
     <div class="modal-card-body">
       <%= yield %>
     </div>
-    <%= render partial: 'modal_foot_component', locals: { item_con: 'trade/my/items' } %>
+    <%= render partial: 'modal_foot_component', locals: { item_con: "trade/#{params[:namespace].presence || 'my'}/items" } %>
   </div>
 </div>
