fix error first

--- a/app/views/application/_modal_foot_component.html.erb
+++ b/app/views/application/_modal_foot_component.html.erb
@@ -1,4 +1,4 @@
-<footer class="modal-card-foot flex-direction-column">
+<footer id="production_modal_foot" class="modal-card-foot flex-direction-column">
   <%= render partial: 'product_summary', locals: { production: @production, cart: @cart, item_con: item_con, options: params.permit(:dispatch) } %>
   <div class="flex justify-content-space-between align-items-center is-fullwidth">
     <div>
