--- a/app/views/factory/productions/_base/_modal_change.html+phone.erb
+++ b/app/views/factory/productions/_base/_modal_change.html+phone.erb
@@ -6,7 +6,7 @@
       <p class="modal-card-title"><%= @production.product.name %></p>
       <span style="width: 1.25rem"></span>
     </header>
-    <div class="modal-card-body">
+    <div id="production_modal_body" class="modal-card-body">
       <%= yield %>
     </div>
     <%= render partial: 'modal_foot_component', locals: { item_con: "trade/#{params[:namespace].presence || 'my'}/items" } %>
