--- a/app/views/factory/productions/create_dialog.turbo_stream.erb
+++ b/app/views/factory/productions/create_dialog.turbo_stream.erb
@@ -1,1 +1,2 @@
-<%= turbo_stream.replace 'modal', partial: 'dialog_form', layout: 'modal_change', locals: { production: @production } %>
+<%= turbo_stream.update 'production_modal_body', partial: 'dialog_form', locals: { production: @production } %>
+<%= turbo_stream.replace 'production_modal_foot', partial: 'modal_foot_component', locals: { production: @production, item_con: "trade/#{params[:namespace].presence || 'my'}/items" } %>
