--- a/app/views/factory/agent/productions/index.html.erb
+++ b/app/views/factory/agent/productions/index.html.erb
@@ -5,7 +5,7 @@
       <%= render partial: 'production_cart', layout: 'card', collection: @productions, as: :model, locals: { cart: @cart, item_con: 'trade/agent/items' } %>
     </div>
   </div>
-  <div class="column is-one-quarter">
+  <div class="column is-one-quarter pl-3">
     <%= render partial: 'cart_nav', locals: { cart_con: 'trade/agent/carts', cart: @cart } %>
   </div>
 </div>
