--- a/app/views/factory/agent/productions/index.html.erb
+++ b/app/views/factory/agent/productions/index.html.erb
@@ -1,11 +1,11 @@
-<div class="columns is-gapless">
+<div class="columns">
   <div class="column">
     <%# render 'taxon_bar' %>
     <div class="cards is-4">
       <%= render partial: 'production_cart', layout: 'card', collection: @productions, as: :model, locals: { cart: @cart, item_con: 'trade/agent/items' } %>
     </div>
   </div>
-  <div class="column is-one-quarter pl-3">
+  <div class="column is-one-quarter">
     <%= render partial: 'cart_nav', locals: { cart_con: 'trade/agent/carts', cart: @cart } %>
   </div>
 </div>
