--- a/app/views/factory/agent/productions/_index/_card.html.erb
+++ b/app/views/factory/agent/productions/_index/_card.html.erb
@@ -1,7 +1,12 @@
 <div class="card">
   <div class="card-content text-centered">
-    <h2 class="title text-danger"><%= model.price.to_money.format.html_safe %></h2>
-    <%= link_to model.name, { action: 'show', id: model.id } %>
+    <div class="is-several">
+      <%= image_tag model.logo.variant(resize_to_limit: [24, 24]), class: 'image' if model.logo.attached? %>
+      <%= link_to model.name, { action: 'show', id: model.id } %>
+    </div>
+    <p>
+      <strong class="text-danger"><%= model.price.to_money.format.html_safe %></strong>
+    </p>
   </div>
   <div class="card-footer py-2">
     <%= yield %>
