--- a/app/views/factory/productions/_base/_space_dispatch.html.erb
+++ b/app/views/factory/productions/_base/_space_dispatch.html.erb
@@ -1,10 +1,10 @@
 <% if params[:dispatch].present? %>
-  <%= button_to({ action: 'change_dispatch', dispatch: params[:dispatch] }) do %>
+  <%= button_to({ action: 'change_dispatch', **params.permit(:dispatch, :desk_id) }) do %>
     <span class="mr-1"><%= Trade::Cart.enum_i18n(:dispatch, params[:dispatch]) %></span>
     <i class="fa-solid fa-right-left"></i>
   <% end %>
 <% else %>
-  <%= button_to({ action: 'change_dispatch', dispatch: current_organ.dispatch }) do %>
+  <%= button_to({ action: 'change_dispatch', dispatch: current_organ.dispatch, **params.permit(:desk_id) }) do %>
     <span class="mr-1"><%= current_organ.dispatch_i18n %></span>
     <i class="fa-solid fa-right-left"></i>
   <% end %>
