--- a/app/views/factory/agent/productions/_index/_top_bar.html+phone.erb
+++ b/app/views/factory/agent/productions/_index/_top_bar.html+phone.erb
@@ -1,4 +1,4 @@
-<div data-controller="mini-program" data-mini-program-pt-class="pt-0" class="box as-bar">
+<div class="box as-bar">
   <% if params[:desk_id] %>
     <%= link_to({ controller: 'space/admin/desks', action: 'all' }, class: 'px-4') do %>
       <i class="fa-solid fa-lg fa-fw-1 fa-angle-left"></i>
