--- a/app/views/factory/agent/productions/_index/_card.html.erb
+++ b/app/views/factory/agent/productions/_index/_card.html.erb
@@ -2,7 +2,7 @@
   <div class="card-content text-centered">
     <div class="is-several">
       <%= image_tag model.logo.variant(resize_to_limit: [24, 24]), class: 'image' if model.logo.attached? %>
-      <%= link_to model.name, { action: 'show', id: model.id } %>
+      <%= link_to model.title, { action: 'show', id: model.id } %>
     </div>
     <p>
       <strong class="text-danger"><%= model.price.to_money.format.html_safe %></strong>
