--- a/app/views/factory/admin/products/_item_form.html.erb
+++ b/app/views/factory/admin/products/_item_form.html.erb
@@ -8,6 +8,7 @@
     <%= ef.text_field :name %>
     <%= ef.number_field :cost_price %>
     <%= ef.number_field :profit_price %>
+    <%= ef.check_box :enabled %>
     <span class="field has-addons has-addons-middle">
       <i class="fa-solid fa-lg fa-plus-circle" data-action="click->field#add" style="cursor: pointer"></i>
       <i class="fa-solid fa-lg fa-minus-circle ml-2" data-action="click->field#remove" style="cursor: pointer"></i>
