--- a/app/views/factory/agent/productions/index.html.erb
+++ b/app/views/factory/agent/productions/index.html.erb
@@ -1,6 +1,7 @@
+<%= render 'index_bar' %>
+
 <div class="columns">
   <div class="column">
-    <%# render 'taxon_bar' %>
     <div class="cards is-4">
       <%= render partial: 'production_cart', layout: 'card', collection: @productions, as: :model, locals: { cart: @cart, item_con: 'trade/agent/items' } %>
     </div>
