--- a/app/views/factory/in/items/_index/_index_tbody.html.erb
+++ b/app/views/factory/in/items/_index/_index_tbody.html.erb
@@ -1,7 +1,7 @@
 <td><%= model.member&.name %></td>
 <td>
   <p class="text-primary"><%= model.organ.name %></p>
-  <p><%= model.good.name %></p>
+  <p><%= model.good_name %></p>
 </td>
 <td><%= model.number %></td>
 <td><%= model.amount %></td>
