--- a/app/views/factory/agent/productions/_index/_card.html+pad.erb
+++ b/app/views/factory/agent/productions/_index/_card.html+pad.erb
@@ -1,6 +1,6 @@
 <div class="card">
   <%= button_to({ action: 'show', id: model.id }, params: { dispatch: params[:dispatch] || current_organ.dispatch }, class: 'p-3 is-fullwidth is-fullheight', form: { class: 'card-content p-0' }) do %>
-    <h2 class="title text-left"><%= model.name %></h2>
+    <h2 class="title text-left"><%= model.title %></h2>
     <p class="text-danger text-right"><%= model.price.to_money.format.html_safe %></p>
   <% end %>
   <div class="card-footer py-2">
