--- a/app/views/factory/agent/productions/_index/_card.html+pad.erb
+++ b/app/views/factory/agent/productions/_index/_card.html+pad.erb
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="card-content">
+  <div class="card-content text-centered">
     <%= link_to({ action: 'show', id: model.id }, params: { dispatch: params[:dispatch] || current_organ.dispatch }, class: 'is-several') do %>
       <%= image_tag model.logo.variant(resize_to_limit: [24, 24]), class: 'image' if model.logo.attached? %>
       <%= link_to model.title, { action: 'show', id: model.id } %>
