--- a/app/views/factory/productions/_base/_tip.html.erb
+++ b/app/views/factory/productions/_base/_tip.html.erb
@@ -1,3 +1,3 @@
-<%= link_to({ page: @products.next_page, **params.permit(:taxon_id, :per) }, data: { controller: 'common', action: 'common#link', page_target: 'tip' }, class: 'justify-content-center', id: 'tip') do %>
+<%= link_to({ page: @productions.next_page, **params.permit(:taxon_id, :per) }, data: { controller: 'common', action: 'common#link', page_target: 'tip' }, class: 'justify-content-center', id: 'tip') do %>
   <p class="text-centered text-grey">点击加载更多</p>
 <% end %>
