--- a/app/views/factory/productions/_base/_top_bar.html+phone.erb
+++ b/app/views/factory/productions/_base/_top_bar.html+phone.erb
@@ -1,6 +1,9 @@
 <div class="box as-bar">
-  <%= link_to({ controller: 'produce_plans' }, class: 'px-4') do %>
-    <i class="fa-solid fa-lg fa-fw-1 fa-angle-left"></i>
+  <% if current_state %>
+    <%= link_to(current_state.referer, class: 'px-4') do %>
+      <i class="fa-solid fa-lg fa-fw-1 fa-angle-left"></i>
+    <% end %>
+  <% else %>
   <% end %>
   <div class="weui-title flex-direction-column">
     <div>
