--- a/app/views/factory/productions/index.html+phone.erb
+++ b/app/views/factory/productions/index.html+phone.erb
@@ -27,3 +27,13 @@
 </div>
 
 <%= render 'taxon' if @produce_plan %>
+
+<div
+  class="display-none"
+  data-controller="wx-share"
+  data-wx-share-title-value="<%= t('.title') %>"
+  data-wx-share-desc-value="<%= '欢迎提前下单' %>>"
+  data-wx-share-link-value="<%= url_for(controller: 'factory/productions', only_path: false) %>"
+  data-wx-share-image-value="<%= current_organ.logo.url %>"
+>
+</div>
