--- a/app/views/factory/productions/index.html+phone.erb
+++ b/app/views/factory/productions/index.html+phone.erb
@@ -31,8 +31,8 @@
 <div
   class="display-none"
   data-controller="wx-share"
-  data-wx-share-title-value="<%= t('.title') %>"
-  data-wx-share-desc-value="<%= '欢迎提前下单' %>>"
+  data-wx-share-title-value="<%= current_organ.name %>"
+  data-wx-share-desc-value="邀请您提前下单，到店即可享用美味"
   data-wx-share-link-value="<%= url_for(controller: 'factory/productions', only_path: false) %>"
   data-wx-share-image-value="<%= current_organ.logo.url %>"
 >
