--- a/app/views/factory/admin/productions/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_base/_index_tbody.html.erb
@@ -50,7 +50,7 @@
   <% end %>
 </td>
 <td>
-  <%= form_with theme: nil, model: model, scope: :production, url: { action: 'update', id: model.id }, data: { controller: 'input' } do |f| %>
+  <%= form_with theme: nil, model: model, scope: :production, url: { action: 'refresh', id: model.id }, data: { controller: 'input' } do |f| %>
     <%= f.check_box :default, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
     <label data-action="click->input#check"></label>
   <% end %>
