--- a/app/views/factory/productions/show.html+phone.erb
+++ b/app/views/factory/productions/show.html+phone.erb
@@ -50,7 +50,7 @@
 <div
   data-controller="mask"
   data-action="click->mask#close"
-  class="weui-mask weui-mask-share"
+  class="weui-mask-share"
   id="mask"
   style="display: none"
 >
