--- a/app/views/factory/admin/taxons/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/taxons/_base/_index_tbody.html.erb
@@ -1,5 +1,5 @@
+<td><i class="fa-solid fa-fw fa-bars text-grey is-drawable"></i></td>
 <td>
-  <i class="fa-solid fa-fw fa-bars text-grey is-drawable"></i>
   <%= link_to({ action: 'show', id: model.id }, class: 'is-several') do %>
     <%= image_tag model.logo, class: 'image is-32x32' if model.logo.attached? %>
     <span><%= model.name %></span>
