--- a/app/views/application/_menu_carts.html.erb
+++ b/app/views/application/_menu_carts.html.erb
@@ -1,4 +1,4 @@
-<div class="box is-padding-less mx-3">
+<div class="box is-padding-less">
   <div class="weui-panel__hd">
     <span class="tag is-danger">全部商品</span>
   </div>
