--- a/app/views/factory/our/productions/_members/_index_list.html+phone.erb
+++ b/app/views/factory/our/productions/_members/_index_list.html+phone.erb
@@ -1,4 +1,4 @@
-<div class="box is-padding-less mx-3">
+<div class="box is-padding-less">
   <div class="weui-panel__hd"><%= t('.title') %></div>
   <div class="weui-panel__bd">
     <div data-controller="open-data" data-open-data-url-value="<%= session[:enter_url] %>" class="weui-cells mt-0">
