--- a/app/views/factory/scenes/show.html.erb
+++ b/app/views/factory/scenes/show.html.erb
@@ -1,4 +1,4 @@
-<div class="box mx-3">
+<div class="box">
   <div class="weui-panel__hd">
     <div class="is-several">
       <%= image_tag @scene.logo, class: 'image is-32x32' if @scene.logo.attached? %>
