--- a/app/views/admin/_factory_nav.html+phone.erb
+++ b/app/views/admin/_factory_nav.html+phone.erb
@@ -1,5 +1,5 @@
 <% if role_permit?(business: 'factory', namespace: 'admin') %>
-<div class="box is-padding-less mx-3">
+<div class="box is-padding-less">
   <div class="box-header">
     <div>
       <span class="size-7 has-border-left-primary"><%= t('factory.admin.title') %></span>
