--- a/app/views/factory/admin/base/_taxon_bar.html+phone.erb
+++ b/app/views/factory/admin/base/_taxon_bar.html+phone.erb
@@ -1,4 +1,4 @@
-<div class="box is-padding-less mx-3">
+<div class="box is-padding-less">
   <div class="weui-panel__hd has-block-space-between">
     <div>
       <i class="fa-solid fa-fw fa-store text-primary"></i>
