--- a/app/views/factory/our/carts/index.html.erb
+++ b/app/views/factory/our/carts/index.html.erb
@@ -1,4 +1,4 @@
-<div class="box is-padding-less mx-3">
+<div class="box is-padding-less">
   <div class="weui-panel__hd">供应商</div>
   <div class="weui-panel__bd">
     <%= render partial: 'organ', collection: current_organ.provides.includes(:taxon).group_by(&:provider), as: :provider %>
