--- a/app/views/factory/our/productions/members.html+phone.erb
+++ b/app/views/factory/our/productions/members.html+phone.erb
@@ -1,4 +1,4 @@
-<div class="box is-padding-less mx-3">
+<div class="box is-padding-less">
   <div class="weui-panel__bd">
     <%= render partial: 'production', locals: { model: @production } if @production %>
   </div>
