--- a/app/views/panel/_factory_nav.html+phone.erb
+++ b/app/views/panel/_factory_nav.html+phone.erb
@@ -1,4 +1,4 @@
-<div class="box is-padding-less mx-3">
+<div class="box is-padding-less">
   <div class="weui-panel__hd">
     <div>
       <i class="fa-solid fa-fw fa-store text-primary"></i>
