--- a/app/views/factory/admin/part_providers/_base/_production_search.html.erb
+++ b/app/views/factory/admin/part_providers/_base/_production_search.html.erb
@@ -3,7 +3,7 @@
     <label class="label">供应产品</label>
   </div>
   <div class="field-body">
-    <div class="panel" data-controller="typer" data-typer-url-value="<%= url_for(action: 'search', organ_id: params[:organ_id]) %>" data-typer-method-value="post">
+    <div class="panel" data-controller="typer" data-typer-url-value="<%= url_for(action: 'search', organ_id: params[:organ_id]) %>">
       <%= f.hidden_field :upstream_production_id, data: { typer_target: 'value' } %>
       <div class="control has-icons-left">
         <%= search_field_tag 'name-like', nil, class: 'input', placeholder: '搜索', data: { typer_target: 'input' } %>
