--- a/app/views/factory/admin/provides/_base/_provider_search.html.erb
+++ b/app/views/factory/admin/provides/_base/_provider_search.html.erb
@@ -3,7 +3,7 @@
     <label class="label">供应商</label>
   </div>
   <div class="field-body">
-    <div class="panel" data-controller="typer" data-typer-url-value="<%= url_for(action: 'search') %>" data-typer-method-value="post">
+    <div class="panel" data-controller="typer" data-typer-url-value="<%= url_for(action: 'search') %>">
       <%= f.hidden_field :provider_id, data: { typer_target: 'value' } %>
       <div class="control has-icons-left">
         <%= search_field_tag 'name-like', nil, class: 'input', placeholder: '搜索', autocomplete: 'off', data: { typer_target: 'input' } %>
