--- a/app/views/factory/admin/addresses/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/addresses/_base/_index_thead.html.erb
@@ -1,6 +1,6 @@
-<th><%= Factory::Address.human_attribute_name(:area_id) %></th>
-<th><%= Factory::Address.human_attribute_name(:detail) %></th>
-<th><%= Factory::Address.human_attribute_name(:contact) %></th>
-<th><%= Factory::Address.human_attribute_name(:tel) %></th>
-<th><%= Factory::Address.human_attribute_name(:post_code) %></th>
-<th><%= Factory::Address.human_attribute_name(:source) %></th>
+<th><%= Ship::Address.human_attribute_name(:area_id) %></th>
+<th><%= Ship::Address.human_attribute_name(:detail) %></th>
+<th><%= Ship::Address.human_attribute_name(:contact) %></th>
+<th><%= Ship::Address.human_attribute_name(:tel) %></th>
+<th><%= Ship::Address.human_attribute_name(:post_code) %></th>
+<th><%= Ship::Address.human_attribute_name(:source) %></th>
