--- a/app/views/factory/admin/productions/_base/_index_tr.html.erb
+++ b/app/views/factory/admin/productions/_base/_index_tr.html.erb
@@ -12,5 +12,11 @@
         <i class="fa-solid fa-trash text-danger"></i>
       <% end %>
     </div>
+    <div data-show-target="item" class="visibility-hidden">
+      <%= link_to({ controller: 'production_spaces', production_id: model.id }, class: 'button is-small is-rounded is-light') do %>
+        <i class="fa-solid fa-pencil text-info"></i>
+        <span class="ml-1"><%= t('.production_spaces.index.title') %></span>
+      <% end %>
+    </div>
   </td>
 </tr>
