--- a/app/views/factory/admin/base/_production_bar.html.erb
+++ b/app/views/factory/admin/base/_production_bar.html.erb
@@ -7,50 +7,56 @@
     <li class="<%= active_helper(controllers: 'production_parts', active: 'is-active') %>">
       <%= link_to({ controller: 'production_parts', production_id: @production.id }) do %>
         <i class="fa-solid fa-folder-tree text-primary"></i>
-        <span class="pl-1"><%= t('.production_parts.index.title') %></span>
+        <span class="ml-1"><%= t('.production_parts.index.title') %></span>
       <% end %>
     </li>
     <li class="<%= active_helper(controllers: 'production_plans', active: 'is-active') %>">
       <%= link_to({ controller: 'production_plans', production_id: @production.id }) do %>
         <i class="fa-solid fa-list text-info"></i>
-        <span class="pl-1"><%= t('.production_plans.index.title') %></span>
+        <span class="ml-1"><%= t('.production_plans.index.title') %></span>
       <% end %>
     </li>
     <li class="<%= active_helper(controllers: 'production_items', active: 'is-active') %>">
       <%= link_to({ controller: 'production_items', production_id: @production.id }) do %>
         <i class="fa-solid fa-list text-primary"></i>
-        <span class="pl-1"><%= t('.production_items.index.title') %></span>
+        <span class="ml-1"><%= t('.production_items.index.title') %></span>
       <% end %>
     </li>
     <li class="<%= active_helper(controllers: 'purchase_items', active: 'is-active') %>">
       <%= link_to({ controller: 'purchase_items', production_id: @production.id }) do %>
         <i class="fa-solid fa-list text-success"></i>
-        <span class="pl-1"><%= t('.purchase_items.index.title') %></span>
+        <span class="ml-1"><%= t('.purchase_items.index.title') %></span>
+      <% end %>
+    </li>
+    <li class="<%= active_helper(controllers: 'production_spaces', active: 'is-active') %>">
+      <%= link_to({ controller: 'production_spaces', production_id: @production.id }) do %>
+        <i class="fa-solid fa-clock-rotate-left text-info"></i>
+        <span class="ml-1"><%= t('.production_spaces.index.title') %></span>
       <% end %>
     </li>
     <li class="<%= active_helper(controllers: 'stock_logs', active: 'is-active') %>">
       <%= link_to({ controller: 'stock_logs', production_id: @production.id }) do %>
         <i class="fa-solid fa-clock-rotate-left text-info"></i>
-        <span class="pl-1"><%= t('.stock_logs.index.title') %></span>
+        <span class="ml-1"><%= t('.stock_logs.index.title') %></span>
       <% end %>
     </li>
     <li class="<%= active_helper(controllers: 'trade_items', active: 'is-active') %>">
       <%= link_to({ controller: 'trade_items', production_id: @production.id }) do %>
         <i class="fa-solid fa-shopping-cart text-info"></i>
-        <span class="pl-1"><%= t('.trade_items.index.title') %></span>
+        <span class="ml-1"><%= t('.trade_items.index.title') %></span>
       <% end %>
     </li>
     <li>
       <%= link_to({ controller: 'rent_charges', production_id: @production.id }) do %>
         <i class="fa-solid fa-clock-rotate-left text-danger"></i>
-        <span class="pl-1"><%= t('.rent_charges.index.title') %></span>
-        <span class="pl-1"><%= @production.rent_charges_count %></span>
+        <span class="ml-1"><%= t('.rent_charges.index.title') %></span>
+        <span class="ml-1"><%= @production.rent_charges_count %></span>
       <% end %>
     </li>
     <li class="<%= active_helper(controllers: 'addresses', active: 'is-active') %>">
       <%= link_to({ controller: 'addresses', production_id: @production.id }) do %>
         <i class="fa-solid fa-map-marker-alt text-warning"></i>
-        <span class="pl-1"><%= t('.addresses.index.title') %></span>
+        <span class="ml-1"><%= t('.addresses.index.title') %></span>
       <% end %>
     </li>
   </ul>
