--- a/app/views/factory/admin/productions/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_base/_index_tbody.html.erb
@@ -1,9 +1,11 @@
 <td>
-  <%= link_to({ controller: 'production_items', production_id: model.id }, class: 'is-several') do %>
-    <%= image_tag model.logo, class: 'image is-24x24' if model.logo.attached? %>
-    <span><%= model.name %></span>
+  <%= link_to({ controller: 'production_items', production_id: model.id }) do %>
+    <p class="is-several">
+      <%= image_tag model.logo.variant(resize_to_limit: [24, 24]), class: 'image is-24x24' if model.logo.attached? %>
+      <span><%= model.name %></span>
+    </p>
+    <p class="text-grey"><%= model.title %></p>
   <% end %>
-  <p class="text-grey"><%= model.title %></p>
 </td>
 <td>
 <div class="button_tos is-column">
