--- a/app/views/factory/admin/products/_form.html.erb
+++ b/app/views/factory/admin/products/_form.html.erb
@@ -4,6 +4,6 @@
 <%= f.text_area :description %>
 <%= f.number_field :base_price %>
 <%= f.number_field :profit_margin, step: 0.01 %>
-<%= f.fields :productions, all: { normal: nil, checkbox: nil }, wrap: { input: 'field > control', checkbox: 'field flex-shrink-0 > control' }, before_wrap: { checkbox: nil }, label: nil, placeholder: true do |ef| %>
+<%= f.fields :productions, all: { normal: nil, checkbox: nil }, wrap: { input: 'field > control', checkbox: 'field flex-shrink-0 has-block-centered > control > label.checkbox' }, before_wrap: { checkbox: nil }, label: nil, placeholder: true do |ef| %>
   <%= render partial: 'item_form', locals: { ef: ef } %>
 <% end %>
