--- a/app/views/factory/admin/purchase_items/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/purchase_items/_base/_index_thead.html.erb
@@ -1,4 +1,4 @@
-<th id="xxd" data-controller="check" data-check-check-commit-outlet="form">
+<th id="xxd" data-controller="check" data-check-form-outlet="form.button_to">
   <%= check_box_tag 'xxd', 'xx', false, data: { check_target: 'all', action: 'check#toggleAll' }, id: nil %>
   <span data-check-target="total"></span>
 </th>
