show all taxons

--- a/app/views/factory/admin/products/_index/_taxon_tbody.html.erb
+++ b/app/views/factory/admin/products/_index/_taxon_tbody.html.erb
@@ -1,5 +1,7 @@
 <tr>
   <td rowspan="<%= size %>">
-    <span><%= taxon&.name %></span>
+  <% if taxon %>
+    <%= link_to taxon.name, { controller: 'taxon/products', taxon_id: taxon.id } %>
+  <% end %>
   </td>
 </tr>
