--- a/app/views/factory/admin/home/_index/_index_column.html.erb
+++ b/app/views/factory/admin/home/_index/_index_column.html.erb
@@ -1,8 +1,6 @@
 <div class="fixed-grid has-6-cols">
+  <p class="text-grey mb-1">商品</p>
   <div class="grid">
-    <%= link_to({ controller: 'organs', action: 'show' }, class: 'cell button is-fullwidth') do %>
-      <span><%= t('.organs.show.title') %></span>
-    <% end %>
     <%= link_to({ controller: 'taxons' }, class: 'cell button is-fullwidth flex-direction-column') do %>
       <span class="text-grey"><%= @taxon_count %></span>
       <span><%= t('.taxons.index.title') %></span>
@@ -14,11 +12,20 @@
     <%= link_to({ controller: 'produce_plans' }, class: 'cell button is-fullwidth flex-direction-column') do %>
       <span><%= t('.produce_plans.index.title') %></span>
     <% end %>
+  </div>
+  <p class="text-grey mb-1">上下游</p>
+  <div class="grid">
     <%= link_to({ controller: 'provides' }, class: 'cell button is-fullwidth') do %>
       <span><%= t('.provides.index.title') %></span>
     <% end %>
     <%= link_to({ controller: 'brands' }, class: 'cell button is-fullwidth') do %>
       <span><%= t('.brands.index.title') %></span>
+    <% end %>
+  </div>
+  <p class="text-grey mb-1">设置</p>
+  <div class="grid">
+    <%= link_to({ controller: 'organs', action: 'show' }, class: 'cell button is-fullwidth') do %>
+      <span><%= t('.organs.show.title') %></span>
     <% end %>
   </div>
 </div>
