--- a/app/views/factory/agent/productions/_index/_card.html+phone.erb
+++ b/app/views/factory/agent/productions/_index/_card.html+phone.erb
@@ -1,4 +1,4 @@
-<div class="media is-boxed">
+<div class="media as-boxed">
   <div class="media-content">
     <div class="is-several">
       <%= image_tag model.logo, class: 'image is-24x24' if model.logo.attached? %>
