--- a/app/views/factory/admin/produce_plans/_products/_product_table.html.erb
+++ b/app/views/factory/admin/produce_plans/_products/_product_table.html.erb
@@ -1,4 +1,4 @@
-<table class="table is-boxed is-fullwidth">
+<table class="table is-fullwidth as-boxed">
   <thead>
     <tr class="is-primary">
       <%= render 'product_thead' %>
