--- a/app/views/factory/admin/production_plans/show.html.erb
+++ b/app/views/factory/admin/production_plans/show.html.erb
@@ -1,6 +1,6 @@
 <%= render 'production_bar' %>
 <%= render 'show_breadcrumb' %>
 
-<dl class="as-show is-boxed">
+<dl class="as-show as-boxed">
   <%= render 'show_table' %>
 </dl>
