--- a/app/views/factory/me/production_items/_qrcode/_production_item.html.erb
+++ b/app/views/factory/me/production_items/_qrcode/_production_item.html.erb
@@ -1,4 +1,4 @@
-<dl class="as-show is-boxed">
+<dl class="as-show as-boxed">
   <div>
     <dt><%= Factory::ProductionItem.human_attribute_name(:name) %></dt>
     <dd><%= @production_item.production.name %></dd>
