--- a/app/views/factory/admin/products/index.html.erb
+++ b/app/views/factory/admin/products/index.html.erb
@@ -4,7 +4,7 @@
 <%= render layout: 'index_table' do %>
   <% @products.group_by(&:taxon).each do |taxon, products| %>
     <%= render partial: 'taxon_tbody', locals: { taxon: taxon, size: products.size + 1 } %>
-    <%= render partial: 'index_tbody', layout: 'index_tr', collection: products, as: :model %>
+    <%= render partial: 'index_tbody', layout: 'index_tr', collection: products, as: :model, cached: true %>
   <% end %>
 <% end %>
 
