--- a/app/views/factory/admin/taxon/products/index.html.erb
+++ b/app/views/factory/admin/taxon/products/index.html.erb
@@ -2,7 +2,7 @@
 <%= render 'index_actions' %>
 
 <%= render layout: 'index_sortable_table' do %>
-  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @products, as: :model %>
+  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @products, as: :model, cached: true %>
 <% end %>
 
 <%= paginate @products %>
