--- a/app/views/factory/admin/taxon/productions/index.html.erb
+++ b/app/views/factory/admin/taxon/productions/index.html.erb
@@ -1,7 +1,7 @@
 <%= render 'taxon_bar' %>
 
 <%= render layout: 'index_table' do %>
-  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @productions, as: :model %>
+  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @productions, as: :model, cached: true %>
 <% end %>
 
 <%= paginate @productions %>
