--- a/app/views/factory/admin/products/_buy/_index_tfoot.html.erb
+++ b/app/views/factory/admin/products/_buy/_index_tfoot.html.erb
@@ -10,7 +10,7 @@
   <div class="level-right">
     <%= link_to({ controller: 'trade/in/orders', action: 'cart', current_cart_id: @cart.id, **params.permit!.slice('factory_taxon_id') }, class: 'button is-success') do %>
       <i class="fa-solid fa-credit-card"></i>
-      <span class="pl-1"><%= t('factory.in.orders.new.title') %></span>
+      <span class="ml-1"><%= t('factory.in.orders.new.title') %></span>
     <% end %>
   </div>
 </div>
