--- a/app/views/factory/admin/home/_index/_index_column.html.erb
+++ b/app/views/factory/admin/home/_index/_index_column.html.erb
@@ -5,10 +5,12 @@
       <span class="text-grey"><%= @taxon_count %></span>
       <span><%= t('.taxons.index.title') %></span>
     <% end %>
-    <%= link_to({ controller: 'scenes' }, class: 'cell button is-fullwidth flex-direction-column') do %>
-      <span class="text-grey"><%= @scene_count %></span>
-      <span><%= t('.scenes.index.title') %></span>
+    <%= link_to({ controller: 'products', action: 'buy' }, class: 'cell button is-fullwidth') do %>
+      <span><%= t('.products.buy.title') %></span>
     <% end %>
+  </div>
+  <p class="text-grey mb-1">生产</p>
+  <div class="grid">
     <%= link_to({ controller: 'produce_plans' }, class: 'cell button is-fullwidth flex-direction-column') do %>
       <span><%= t('.produce_plans.index.title') %></span>
     <% end %>
@@ -24,6 +26,10 @@
   </div>
   <p class="text-grey mb-1">设置</p>
   <div class="grid">
+    <%= link_to({ controller: 'scenes' }, class: 'cell button is-fullwidth flex-direction-column') do %>
+      <span class="text-grey"><%= @scene_count %></span>
+      <span><%= t('.scenes.index.title') %></span>
+    <% end %>
     <%= link_to({ controller: 'organs', action: 'show' }, class: 'cell button is-fullwidth') do %>
       <span><%= t('.organs.show.title') %></span>
     <% end %>
