--- a/app/views/factory/admin/products/_buy/_production_tr.html.erb
+++ b/app/views/factory/admin/products/_buy/_production_tr.html.erb
@@ -1,10 +1,3 @@
-<tr id="tr_<%= model.product_id %>_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
+<tr id="tr_<%= model.product_id %>_<%= model.id %>">
   <%= yield %>
-  <td>
-    <div data-show-target="item" class="visibility-hidden">
-      <%= button_to({ controller: 'productions', action: 'show', product_id: model.product_id, id: model.id }, aria: { label: t('.productions.show.title') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-solid fa-circle-info text-info"></i>
-      <% end %>
-    </div>
-  </td>
 </tr>
